added driver for QMC5883L.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,9 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(GNCTestBench main.c )
+add_executable(GNCTestBench 
+                main.c
+                drivers/QMC5883L/qmc5883l.c  )
 
 pico_set_program_name(GNCTestBench "GNCTestBench")
 pico_set_program_version(GNCTestBench "0.1")
