--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,10 @@ pico_sdk_init()
 add_executable(GNCTestBench 
                 main.c
                 drivers/QMC5883L/qmc5883l.c 
-                drivers/DS3231/ds3231.c )
+                drivers/DS3231/ds3231.c 
+                drivers/NEOM8N/neom8n.c
+                drivers/MPU6050/mpu6050.c)
+
 
 pico_set_program_name(GNCTestBench "GNCTestBench")
 pico_set_program_version(GNCTestBench "0.1")
