--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ target_link_libraries(GNCTestBench
         hardware_i2c
         hardware_uart
         hardware_dma
+        pico_multicore
         )
 
 pico_add_extra_outputs(GNCTestBench)
