--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "files.associations": {
         "stdlib.h": "c",
         "uart.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "multicore.h": "c"
     }
 }
